--- a/lec/colab/1/index.html
+++ b/lec/colab/1/index.html
@@ -419,7 +419,7 @@
             <nav class="toc">
               <header><h4 class="nav__title"><i class="fas fa-file-alt"></i> 目次</h4></header>
               <ul class="toc__menu">
-  <li><a href="#google-アカウントの取得">Google アカウントの取得</a></li>
+  <li><a href="#gmail-アカウントの取得">Gmail アカウントの取得</a></li>
   <li><a href="#colab-のインストール">Colab のインストール</a></li>
   <li><a href="#colab-の動作確認">Colab の動作確認</a></li>
 </ul>
@@ -428,10 +428,10 @@
         
         <p><a href="../">目次へもどる</a></p>
 
-<h3 id="google-アカウントの取得">Google アカウントの取得</h3>
+<h3 id="gmail-アカウントの取得">Gmail アカウントの取得</h3>
 
 <ul>
-  <li>Colab (Google Colaboratory) は，Google のサービスなので，Google (Gmail) のアカウントが必要になります．</li>
+  <li>Colab (Google Colaboratory) は，Google のクラウドサービスなので，Gmail アカウントが必要になります．</li>
   <li>持ってない人は取得してください．（Androidスマホユーザーは持ってるはず）</li>
 </ul>
 
@@ -439,7 +439,7 @@
 
 <h3 id="colab-のインストール">Colab のインストール</h3>
 
-<p>Colab の全機能を利用するには，自分の Google アカウントにインストールします．</p>
+<p>Colab の全機能を利用するには，自分の Google アカウントに Colab をインストールします．</p>
 
 <ul>
   <li>まず，自分のアカウントで「ドライブ」を起動します．</li>
@@ -450,7 +450,7 @@
 <ul>
   <li>「マイドライブ」をクリックして，「その他」「＋アプリを追加」を選びます．
     <ul>
-      <li>サブフォルダを作って，そこで同様の操作をすると，そのフォルダだけに Colab をインストールすることができます（他のフォルダに影響を与えない）．</li>
+      <li>サブフォルダを作って，そこで同様の操作をすると，そのフォルダだけに Colab をインストールできます（他のフォルダに影響を与えない）．</li>
     </ul>
   </li>
 </ul>
@@ -510,10 +510,10 @@
 <p><img src="../img/100colab_exec.jpg" alt="Google Colaboratory" /></p>
 
 <ul>
-  <li><strong>【実行】</strong> セル内で，Ctrlキーを押しながらEnterキーを叩くと，実行されます．
+  <li><strong>【実行】</strong> セルの左端にある実行ボタン（再生ボタンみたいな）をクリックすると，セル内のコードが実行されます．
     <ul>
-      <li>Ctrl-Enter の代わりに，該当セルの再生ボタンを押しても実行できます．</li>
-      <li>ブラウザによっては，Shift-Enter でも実行できるかも．</li>
+      <li>実行ボタンの代わりに，キーボードで《Ctrl-Enter》（Ctrlキーを押しながらEnterキーを押す）しても，同様に実行できます．</li>
+      <li>ブラウザによっては，《Shift-Enter》でも実行できるかも．</li>
     </ul>
   </li>
 </ul>
