--- a/lec/colab/index.html
+++ b/lec/colab/index.html
@@ -409,12 +409,12 @@
 
 <hr />
 
-<p>数値計算で使用するプログラミング言語 Python と，その実行環境 Colab の使い方を速習します．</p>
+<p>このセクションでは，プログラミング言語 Python による数値計算と，そのための実行環境である Colab の使い方を，速習します．</p>
 
 <ul>
-  <li><a href="https://ja.wikipedia.org/wiki/Python">Python</a> とは，人気沸騰中のプログラミング言語で，汎用性の高さがウリです．これまで複数のプログラミング言語を組み合わせないと書けなかった処理が，これ1つで書けてしまいます．AI分野の標準言語としても有名です．</li>
-  <li><a href="https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja">Colab (Google Colaboratory)</a> とは，Google が無償提供している，クラウド型の Python 実行環境です．</li>
-  <li>Python 自体は，単体で PC にインストールして使うこともできますが，ここではメディア授業を考慮して，Colab 経由でブラウザから実行する方法を学びます．</li>
+  <li><a href="https://ja.wikipedia.org/wiki/Python">Python</a> とは，人気沸騰中のプログラミング言語で，汎用性の高さがウリです．これまで複数のプログラミング言語を組み合わせないと書けなかった処理が，これ1つで書けてしまいます．AI分野の標準言語となりつつあります．</li>
+  <li>Colab (<a href="https://colab.research.google.com/notebooks/welcome.ipynb?hl=ja">Google Colaboratory</a>) とは，Google が無償提供する Python 実行環境です．クラウド型なので，ウェブブラウザから利用できます．</li>
+  <li>Python 自体は，PC にインストールして使うこともできますが（かつてはそれが主流だった），ここではメディア授業を考慮して，Python をウェブブラウザから Colab 経由で実行する方法を学びます．</li>
 </ul>
 
 <h3 id="目次">目次</h3>
