--- a/lec/colab/index.html
+++ b/lec/colab/index.html
@@ -420,6 +420,7 @@
 <h3 id="目次">目次</h3>
 <ul>
   <li><a href="1/">Colab のインストール</a></li>
+  <li><a href="2/">Python の実習</a></li>
 </ul>
 
 <p>ただいま工事中</p>
