--- a/lec/colab/2/index.html
+++ b/lec/colab/2/index.html
@@ -426,7 +426,7 @@
 
 <ul>
   <li><a href="https://colab.research.google.com/github/ktysd/colab-pub/blob/master/python/python_howto.ipynb">実習はこちら</a></li>
-  <li><a href="https://colab.research.google.com/github/ktysd/colab-pub/blob/master/python/python_howto_ANS.ipynb">実習はこちら(回答付き)</a></li>
+  <li><a href="https://colab.research.google.com/github/ktysd/colab-pub/blob/master/python/python_howto_ANS.ipynb">実習はこちら(解答付き)</a></li>
 </ul>
 
 <p><a href="../1">»1つ前へ</a></p>
