--- a/lec/mdyn/sim/index.html
+++ b/lec/mdyn/sim/index.html
@@ -391,11 +391,7 @@
             </nav>
           </aside>
         
-        
-<ul>
-  <li>リンク元 → <a href="https://udai.c-learning.jp/s/">https://udai.c-learning.jp/s/</a> | Top &gt; 機械力学</li>
-  <li>以下，メディア授業の第14回，第15回（最終）の実施方法を，説明します．</li>
-</ul>
+        <p>メディア授業の第14回，第15回（最終）の実施方法を，説明します．</p>
 
 <h3 id="第13回までとの相違点">第13回までとの相違点</h3>
 
