--- a/lec/mdyn/sim/index.html
+++ b/lec/mdyn/sim/index.html
@@ -386,6 +386,7 @@
               <header><h4 class="nav__title"><i class="fas fa-file-alt"></i> 目次</h4></header>
               <ul class="toc__menu">
   <li><a href="#第13回までとの相違点">第13回までとの相違点</a></li>
+  <li><a href="#実施方法">実施方法</a></li>
   <li><a href="#お知らせ">お知らせ</a></li>
 </ul>
             </nav>
@@ -405,7 +406,7 @@
 
 <p>最悪，コンピュータ演習を，全く実施できない人もでてくるかも知れません．そうなっても成績には影響しないので，夏休みの自由研究としてください．（遠隔での不具合対応は無理かも）</p>
 
-<h2 id="実施方法">実施方法</h2>
+<h3 id="実施方法">実施方法</h3>
 
 <p>次の手順で進めてください．</p>
 
