--- a/books/pb/errata/index.html
+++ b/books/pb/errata/index.html
@@ -437,7 +437,7 @@
       =
         \frac{1}{2}
         \mathrm{erf}\left(\frac{m}{\sqrt{2 v}}\right)
-        {\color{red}-}
+        \,{\color{red}-}\,
         \frac{1}{2}
         \mathrm{erf}\left(\frac{m-A}{\sqrt{2 v}}\right)</script></li>
     </ul>
@@ -468,6 +468,12 @@
     <ul>
       <li>誤）背反</li>
       <li>正）排反</li>
+    </ul>
+  </li>
+  <li>[2020/09/11] 例題6.2の解答例
+    <ul>
+      <li>誤）<script type="math/tex">C_{ij}^2-\sigma_i^2\sigma_j^2\geq 0</script></li>
+      <li>正）<script type="math/tex">C_{ij}^2-\sigma_i^2\sigma_j^2\,{\color{red}\leq}\, 0</script></li>
     </ul>
   </li>
 </ul>
